--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
     "format": "prettier --write"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/react-query": "^5.90.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "eventsource-parser": "^3.0.6",
     "lucide-react": "^0.553.0",
+    "next-themes": "^0.4.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-redux": "^9.2.0",
+    "react-router": "^7.9.6",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "zustand": "^5.0.8"
@@ -27,10 +31,13 @@
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^2.3.5",
     "@eslint/js": "^9.39.1",
-    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@iconify/json": "^2.2.407",
+    "@iconify/react": "^6.0.2",
+    "@iconify/tailwind4": "^1.1.0",
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@types/react-redux": "^7.1.34",
     "@vitejs/plugin-react-swc": "^4.2.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
