--- a/package.json
+++ b/package.json
@@ -12,6 +12,13 @@
     "format": "prettier --write"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@reduxjs/toolkit": "^2.10.1",
     "@tailwindcss/vite": "^4.1.17",
     "class-variance-authority": "^0.7.1",
@@ -31,6 +38,7 @@
   "devDependencies": {
     "@eslint-react/eslint-plugin": "^2.3.5",
     "@eslint/js": "^9.39.1",
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@iconify/json": "^2.2.407",
     "@iconify/react": "^6.0.2",
     "@iconify/tailwind4": "^1.1.0",
