--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -31,5 +31,5 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true
   },
-  "include": ["src"]
+  "include": ["src", "auto-imports.d.ts"]
 }
